[GStreamer] webrtc/processIceTransportStateChange-gc.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=308362

Reviewed by Xabier Rodriguez-Calvar.

The GStreamer ICE transport backend notifications are now decoupled to a separate observer. With the
previous approach flaky crashes were happening, exposing mis-usage of WeakPtr across threads.

* LayoutTests/platform/gtk/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceTransportBackend.cpp:
(WebCore::GStreamerIceTransportBackendObserver::GStreamerIceTransportBackendObserver):
(WebCore::GStreamerIceTransportBackendObserver::start):
(WebCore::GStreamerIceTransportBackendObserver::stop):
(WebCore::GStreamerIceTransportBackendObserver::onIceTransportStateChanged):
(WebCore::GStreamerIceTransportBackendObserver::onGatheringStateChanged):
(WebCore::GStreamerIceTransportBackendObserver::onSelectedCandidatePairChanged):
(WebCore::GStreamerIceTransportBackend::GStreamerIceTransportBackend):
(WebCore::GStreamerIceTransportBackend::registerClient):
(WebCore::GStreamerIceTransportBackend::unregisterClient):
(WebCore::GStreamerIceTransportBackend::~GStreamerIceTransportBackend): Deleted.
(WebCore::GStreamerIceTransportBackend::iceTransportChanged): Deleted.
(WebCore::GStreamerIceTransportBackend::stateChanged const): Deleted.
(WebCore::GStreamerIceTransportBackend::gatheringStateChanged const): Deleted.
(WebCore::GStreamerIceTransportBackend::selectedCandidatePairChanged): Deleted.
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceTransportBackend.h:

Canonical link: https://commits.webkit.org/308034@main